--- a/style.css
+++ b/style.css
@@ -238,3 +238,84 @@ p {
 .tiny {
   font-size: 13px;
 }
+
+#jumbotron {
+  animation: fadeIn 1s;
+  background-image: url("https://images.unsplash.com/photo-1512671584073-0ed5878c5679?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+}
+.jumbotron-overlay {
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* put overlay behind h1 and p */
+}
+
+h1,
+p {
+  z-index: 2; /* put h1 and p in front of overlay */
+  color: white; /* make sure text is white */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.album-badge {
+  position: absolute;
+  top: 0;
+  left: 5;
+}
+
+.tracklist {
+  margin-top: 80px;
+  color: white;
+}
+.tracklist tbody tr:nth-child(odd) {
+  background-color: #5d2569;
+}
+
+.tracklist table th {
+  color: white;
+}
+
+.tracklist table td {
+  color: white;
+}
+
+.table-striped {
+  width: 100%;
+}
+
+.add-track-btn {
+  transition: all 0.3s ease-in-out;
+}
+.add-track-btn:hover {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  transform: scale(1.1);
+}
+.add-track-btn:hover {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.delete-btn {
+  display: block;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+tr:hover .delete-btn {
+  display: block;
+  opacity: 1;
+}
